Revert "Revert "test if it fails again: Revert "FIX: force gesis binder to use user: worker"""
This reverts commit 234f28a29b4c2ad0555d201504db4d2489d03a9c.

Revert "test if it fails again: Revert "FIX: force gesis binder to use user: worker""

This reverts commit 42abe68344a9b7db1ef8602df47e278f47e183a8.

Revert "FIX: force gesis binder to use user: worker"

This reverts commit b175031888a8b106002c9f0b8ac75f363d829b81.

Revert "fix for: force all gesishub pods to move on user worker"

This reverts commit 60a388ed5d0ddc76d8098dbf6a5b8f36995cffa7.

Revert "force all gesishub pods to move on user worker"

This reverts commit be2ed2fcf611d0c7014db833e66c52985b6a77b1.

--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -24,8 +24,6 @@ etcJupyter:
 
 persistent_binderhub:
   binderhub:
-    nodeSelector:
-      user: worker
     config:
       GitHubRepoProvider:
         # Add banned repositories to the list below
@@ -123,7 +121,7 @@ persistent_binderhub:
           # z2jh chart has a default egress rule: allow all outbound traffic for hub
           enabled: true
         nodeSelector:
-          user: worker  # where database is
+          base: worker  # where database is
         db:
           type: postgres
         annotations:
@@ -258,8 +256,6 @@ persistent_binderhub:
                 ] + [(r'/logout', self.default_logout_handler), (r'/login', self.default_login_handler)]
             GenericOAuthenticator.get_handlers = get_handlers
       proxy:
-        nodeSelector:
-          user: worker
         https:
           type: offload
         networkPolicy:
