--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -56,7 +56,7 @@ binderhub:
       pod_quota: 200
       base_url: /binder/
       use_registry: true
-      build_image: jupyter/repo2docker:0.11.0-184.g30ef220
+      build_image: jupyter/repo2docker:0.11.0-186.g968cc43
       build_node_selector:
         user: worker
       per_repo_quota: 100
