--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,7 +45,6 @@ build_job:
       fi;
   only:
     - master
-    - staging
   tags:
     - orc
   when: on_success
@@ -85,20 +84,21 @@ deploy_staging:
       echo "####### Running staging deploy"
       mode="fetch_co"
       #pip3 install fabric==2.4.*
-      if git diff HEAD~ --name-only | egrep 'gallery/_secret_config_test.py'; then
-        mode+="-gallerytestconf"
-      fi;
-      if git diff HEAD~ --name-only | egrep 'gallery/config_test.yaml'; then
-        mode+="-gallerytestapp"
-      fi;
-      if git diff HEAD~ --name-only | egrep 'gesishub/config_test.yaml|gesishub/_secret_test.yaml|gesishub/gesishub/|load_balancer/static/images/|load_balancer/static/styles/|load_balancer/static/scripts/'; then
-        mode+="-jhubtestns"
-      fi;
-      if git diff HEAD~ --name-only | egrep 'gesisbinder/config_test.yaml|gesisbinder/_secret_test.yaml|gesisbinder/gesisbinder/|load_balancer/static/images/|load_balancer/static/styles/|load_balancer/static/scripts/'; then
-        mode+="-bhubtestns"
-      fi;
-      echo "####### mode: $mode"
-      fab -H $K8S_STAGING_MASTER_NODE_IP deploy -u ladmin -p $K8S_STAGING_MASTER_NODE_PASSWORD -r $CI_COMMIT_SHA -m $mode -s
+      #if git diff HEAD~ --name-only | egrep 'gallery/_secret_config_test.py'; then
+      #  mode+="-gallerytestconf"
+      #fi;
+      #if git diff HEAD~ --name-only | egrep 'gallery/config_test.yaml'; then
+      #   mode+="-gallerytestapp"
+      # fi;
+      # if git diff HEAD~ --name-only | egrep 'gesishub/config_test.yaml|gesishub/_secret_test.yaml|gesishub/gesishub/|load_balancer/static/images/|load_balancer/static/styles/|load_balancer/static/scripts/'; then
+      #   mode+="-jhubtestns"
+      # fi;
+      # if git diff HEAD~ --name-only | egrep 'gesisbinder/config_test.yaml|gesisbinder/_secret_test.yaml|gesisbinder/gesisbinder/|load_balancer/static/images/|load_balancer/static/styles/|load_balancer/static/scripts/'; then
+      #   mode+="-bhubtestns"
+      # fi;
+      # echo "####### mode: $mode"
+      fab -H $K8S_STAGING_MASTER_NODE_IP test -u ladmin -p $K8S_STAGING_MASTER_NODE_PASSWORD
+    #   fab -H $K8S_STAGING_MASTER_NODE_IP deploy -u ladmin -p $K8S_STAGING_MASTER_NODE_PASSWORD -r $CI_COMMIT_SHA -m $mode -s
   only:
     - staging
   tags:
@@ -124,6 +124,7 @@ deploy_prod:
       git push $URL $CI_COMMIT_SHA:master
 
       echo "####### Running deploy"
+      echo $USER
       mode="fetch_co"
       #pip3 install fabric==2.4.*
       if git diff HEAD~ --name-only | egrep 'gallery/_secret_config.py'; then
