--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -99,6 +99,7 @@ deploy_prod:
       git push $URL $CI_COMMIT_SHA:master
 
       echo "####### Running deploy"
+      echo $USER
       mode="fetch_co"
       #pip3 install fabric==2.4.*
       if git diff HEAD~ --name-only | egrep 'gallery/_secret_config.py'; then
