--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n388.h9cc5a54
+   version: 0.2.0-n409.hc20a2da
    repository: https://jupyterhub.github.io/helm-chart
