binderhub: https://github.com/jupyterhub/binderhub/compare/c20a2da...1f1f0c4

--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n409.hc20a2da
+   version: 0.2.0-n412.h1f1f0c4
    repository: https://jupyterhub.github.io/helm-chart
