--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n412.h1f1f0c4
+   version: 0.2.0-n423.ha36348e
    repository: https://jupyterhub.github.io/helm-chart
