--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n444.h8c3bd51
+   version: 0.2.0-n449.h8ab9f23
    repository: https://jupyterhub.github.io/helm-chart
