--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n451.h6a2b398
+   version: 0.2.0-n454.h97fb8c3
    repository: https://jupyterhub.github.io/helm-chart
