--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -97,6 +97,7 @@ binderhub:
           "imprint_url": "https://www.gesis.org/en/institute/imprint/",
           "data_protection_url": "https://www.gesis.org/en/institute/data-protection/",
           "gesis_url": "https://www.gesis.org/en/home/",
+          "status_url": "http://gesisnotebooks.github.io/status/",
           "gallery_url": "/gallery/",
           "faq_url": "/faq/",
 
