--- a/gesishub/gesishub/files/etc/jupyterhub/extra_config.json
+++ b/gesishub/gesishub/files/etc/jupyterhub/extra_config.json
@@ -8,6 +8,7 @@
     "tou_url": "/terms_of_use/",
     "imprint_url": "https://www.gesis.org/en/institute/imprint/",
     "data_protection_url": "https://www.gesis.org/en/institute/data-protection/",
+    "status_url": "http://gesisnotebooks.github.io/status/",
     "gesis_url": "https://www.gesis.org/en/home/",
     "gallery_url": "/gallery/",
     "faq_url": "/faq/",
