move proxy.chp.networkPolicy to config.yaml

--- a/gesisbinder/config.yaml
+++ b/gesisbinder/config.yaml
@@ -99,6 +99,8 @@ binderhub:
           http: 30085
           https: 30082
       chp:
+        networkPolicy:
+          enabled: true
         resources:
           requests:
             cpu: "0.5"
