--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -210,6 +210,7 @@ binderhub:
       pdb:
         minAvailable: 0
       https:
+        enabled: true
         type: offload
       # chp:
       #   networkPolicy:
