--- a/gesisbinder/config.yaml
+++ b/gesisbinder/config.yaml
@@ -31,6 +31,7 @@ binderhub:
   config:
     BinderHub:
       hub_url: https://notebooks.gesis.org/binder/jupyter/
+      # hub_url_local: http://proxy-public/binder/
       image_prefix: gesiscss/binder-
   extraConfig:
     00-template-variables: |
@@ -92,16 +93,21 @@ binderhub:
       #  annotations:
       #    prometheus.io/scrape: 'true'
       #    prometheus.io/path: '/binder/jupyter/hub/metrics'
-    debug:
-      enabled: true
+
     proxy:
       service:
         nodePorts:
           http: 30085
           https: 30082
       chp:
-        networkPolicy:
-          enabled: true
+        # networkPolicy:
+        #   # z2jh chart has a default ingress rule which allows inbound traffic
+        #   # to port 8000 (HTTP port) from pods with label "hub.jupyter.org/network-access-proxy-HTTP" and
+        #   # to port 8001 (API port) from pods with label "hub.jupyter.org/network-access-proxy-API",
+        #   # and only hub pod has these labels
+        #   # so only the hub pod can talk to the proxy's API and HTTP ports
+        #   # z2jh chart has a default egress rule: allow all outbound traffic for proxy
+        #   enabled: true
         resources:
           requests:
             cpu: "0.5"
