--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -212,15 +212,15 @@ binderhub:
       https:
         enabled: true
         type: offload
-      # chp:
-      #   networkPolicy:
-      #     # z2jh chart has a default ingress rule which allows inbound traffic
-      #     # to port 8000 (HTTP port) from pods with label "hub.jupyter.org/network-access-proxy-HTTP" and
-      #     # to port 8001 (API port) from pods with label "hub.jupyter.org/network-access-proxy-API",
-      #     # and only hub pod has these labels
-      #     # so only the hub pod can talk to the proxy's API and HTTP ports
-      #     # z2jh chart has a default egress rule: allow all outbound traffic for proxy
-      #     enabled: true
+      chp:
+        networkPolicy:
+          # z2jh chart has a default ingress rule which allows inbound traffic
+          # to port 8000 (HTTP port) from pods with label "hub.jupyter.org/network-access-proxy-HTTP" and
+          # to port 8001 (API port) from pods with label "hub.jupyter.org/network-access-proxy-API",
+          # and only hub pod has these labels
+          # so only the hub pod can talk to the proxy's API and HTTP ports
+          # z2jh chart has a default egress rule: allow all outbound traffic for proxy
+          enabled: true
       service:
         type: NodePort
     singleuser:
