--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -198,3 +198,28 @@ deploy_nginx:
   allow_failure: false
   dependencies: []
   retry: 1
+
+deploy_nginx_staging:
+  stage: deploy
+  script:
+    - |
+      mode="fetch_co"
+      # egrep: -v, --invert-match select non-matching lines
+      if git diff HEAD~ --name-only | egrep -v load_balancer/sites-available/orc_test | egrep 'load_balancer/sites-available|load_balancer/snippets'; then
+        echo "####### Reloading nginx ($CI_COMMIT_REF_NAME)"
+        mode+="-config"
+      fi;
+      if git diff HEAD~ --name-only | egrep 'load_balancer/static'; then
+        echo "####### Updating static files ($CI_COMMIT_REF_NAME)"
+        mode+="-static"
+      fi;
+      fab -H $K8S_STAGING_BASE_NODE_IP nginx -u ladmin -p $K8S_BASE_NODE_PASSWORD -b $CI_COMMIT_REF_NAME -r $CI_COMMIT_SHA -m $mode
+  only:
+    - staging
+  tags:
+    - staging
+  when: on_success
+#  when: manual
+  allow_failure: false
+  dependencies: []
+  retry: 1
