--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -56,7 +56,7 @@ binderhub:
       pod_quota: 200
       base_url: /binder/
       use_registry: true
-      build_image: jupyter/repo2docker:0.11.0-195.g2f1914d
+      build_image: jupyter/repo2docker:0.11.0-197.gb464a5e
       build_node_selector:
         user: worker
       per_repo_quota: 100
