--- a/gesisbinder/bot/cron_job.yaml
+++ b/gesisbinder/bot/cron_job.yaml
@@ -3,9 +3,9 @@ kind: CronJob
 metadata:
   name: update-gesisbinder
 spec:
-  schedule: "10,30,50 * * * *"
+  schedule: "*/5 * * * *"
   # Setting a limit to 0 corresponds to keeping none of the corresponding kind of jobs after they finish.
-  successfulJobsHistoryLimit: 0
+  successfulJobsHistoryLimit: 5
   failedJobsHistoryLimit: 70
   jobTemplate:
     spec:
