--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -42,6 +42,8 @@ binderhub:
         - ^hmharshit/cn-ait.*
         - ^shishirchoudharygic/mltraining.*
         - ^hmharshit/mltraining.*
+        - ^FDesnoyer/MathExp.*
+        - ^GuitarsAI/.*
       high_quota_specs:
         - ^gesiscss/.*
       #spec_config:
