--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -58,7 +58,7 @@ binderhub:
       pod_quota: 200
       base_url: /binder/
       use_registry: true
-      build_image: jupyter/repo2docker:0.11.0-199.gc75b5ab
+      build_image: jupyter/repo2docker:0.11.0-201.ga0606f2
       build_node_selector:
         user: worker
       per_repo_quota: 100
