--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -48,7 +48,7 @@ persistent_binderhub:
           - ^https%3A%2F%2Fbitbucket.org%2Fnikiubel%2Fnikiubel.bitbucket.io.git/.*
           - ^https%3A%2F%2Fjovian.ml%2Fapi%2Fgit%2F.*
       BinderHub:
-        build_image: jupyter/repo2docker:0.11.0-201.ga0606f2
+        build_image: jupyter/repo2docker:0.11.0-207.g45229ad
         build_node_selector:
           user: worker
         per_repo_quota: 100
