binderhub: https://github.com/jupyterhub/binderhub/compare/32e06ee...81660eb

--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n472.h32e06ee
+   version: 0.2.0-n499.h81660eb
    repository: https://jupyterhub.github.io/helm-chart
