binderhub: https://github.com/jupyterhub/binderhub/compare/81660eb...d631d84

--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n499.h81660eb
+   version: 0.2.0-n506.hd631d84
    repository: https://jupyterhub.github.io/helm-chart
