binderhub: https://github.com/jupyterhub/binderhub/compare/d631d84...06dbe4c

--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n506.hd631d84
+   version: 0.2.0-n510.h06dbe4c
    repository: https://jupyterhub.github.io/helm-chart
