binderhub: https://github.com/jupyterhub/binderhub/compare/06dbe4c...e17e39f

--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n510.h06dbe4c
+   version: 0.2.0-n512.he17e39f
    repository: https://jupyterhub.github.io/helm-chart
