--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n512.he17e39f
+   version: 0.2.0-n514.h9fb668d
    repository: https://jupyterhub.github.io/helm-chart
