--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n514.h9fb668d
+   version: 0.2.0-n519.hf5c1a19
    repository: https://jupyterhub.github.io/helm-chart
