--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n521.hd5efd72
+   version: 0.2.0-n523.h854be18
    repository: https://jupyterhub.github.io/helm-chart
