--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -58,7 +58,7 @@ binderhub:
       pod_quota: 200
       base_url: /binder/
       use_registry: true
-      build_image: jupyter/repo2docker:2021.01.0-35.gb6e451d
+      build_image: jupyter/repo2docker:2021.01.0-43.gb609424
       build_node_selector:
         user: worker
       per_repo_quota: 100
