--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n525.h7fc6e48
+   version: 0.2.0-n528.h3aa7cd9
    repository: https://jupyterhub.github.io/helm-chart
