--- a/gesishub/config_test.yaml
+++ b/gesishub/config_test.yaml
@@ -37,6 +37,14 @@ persistent_binderhub:
             url: http://194.95.75.15:30183  # base worker
             oauth_redirect_uri: "https://notebooks-test.gesis.org/services/binder/oauth_callback"
             oauth_client_id: "binder-oauth-client-test"
+        config:
+          GenericOAuthenticator:
+            login_service: "GESIS Test Login"  # to customize the label on the login button
+            oauth_callback_url: https://notebooks-test.gesis.org/hub/oauth_callback
+            authorize_url: https://login-test.gesis.org/realms/gesis/protocol/openid-connect/auth
+            token_url: https://login-test.gesis.org/realms/gesis/protocol/openid-connect/token
+            userdata_url: https://login-test.gesis.org/realms/gesis/protocol/openid-connect/userinfo
+
         extraConfig:
           020-orc: |
             production = False
@@ -77,26 +85,6 @@ persistent_binderhub:
           limits:
             cpu: "1"
             memory: 1Gi
-        extraEnv:
-          OAUTH2_AUTHORIZE_URL: https://login-test.gesis.org/realms/gesis/protocol/openid-connect/auth
-          OAUTH2_TOKEN_URL: https://login-test.gesis.org/realms/gesis/protocol/openid-connect/token
-          OAUTH_CALLBACK_URL: https://notebooks-test.gesis.org/hub/oauth_callback
-
-      # https://zero-to-jupyterhub.readthedocs.io/en/latest/authentication.html#openid-connect
-      auth:
-        custom:
-          config:
-            login_service: "GESIS Test Login"  # to customize the label on the login button
-            token_url: https://login-test.gesis.org/realms/gesis/protocol/openid-connect/token
-            userdata_url: https://login-test.gesis.org/realms/gesis/protocol/openid-connect/userinfo
-        #type: github
-        #custom: {}
-        #github:
-        #  callbackUrl: "https://notebooks-test.gesis.org/hub/oauth_callback"
-        #scopes:
-        #  - "read:user"
-        #admin:
-        #  users: ['bitnik', 'arnim', 'mriduls']
 
       proxy:
         service:
