--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -100,7 +100,16 @@ persistent_binderhub:
       allowOrigin: '*'
 
     dind:
-      enabled: false
+      enabled: true
+      resources:
+        requests:
+          cpu: "0.5"
+          memory: 1Gi
+        limits:
+          cpu: "4"
+          memory: 4Gi
+      hostLibDir: /var/lib/dind/jhub
+      hostSocketDir: /var/run/dind/jhub
 
     imageCleaner:
       enabled: false
@@ -126,6 +135,18 @@ persistent_binderhub:
           base: worker  # where database is
         db:
           type: postgres
+        config:
+          Authenticator:
+            admin_users: ['mridul.seth@gesis.org']
+            enable_auth_state: true
+          GenericOAuthenticator:
+            auto_login: true
+            userdata_method: GET
+            userdata_params: {'state': 'state'}
+            username_key: preferred_username
+          JupyterHub:
+            authenticator_class: oauthenticator.generic.GenericOAuthenticator
+
         annotations:
           # auto restart hub pod if any of the configmap files changes
           #checksum/config-map: {{ include (print $.Template.BasePath "/hub-configmap.yaml") . | sha256sum }}
@@ -273,22 +294,6 @@ persistent_binderhub:
         service:
           type: NodePort
 
-      auth:
-        # https://zero-to-jupyterhub.readthedocs.io/en/latest/authentication.html#openid-connect
-        type: custom
-        custom:
-          className: oauthenticator.generic.GenericOAuthenticator
-          config:
-            auto_login: true
-            userdata_method: GET
-            userdata_params: {'state': 'state'}
-            username_key: preferred_username
-        admin:
-          users:
-            - arnim.bleier@gesis.org
-            - mridul.seth@gesis.org
-        state:
-          enabled: true
 
       singleuser:
         networkPolicy:
