dont build docker on runner

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,12 +61,12 @@ build_job_staging:
       #CI_COMMIT_SHA_8=${CI_COMMIT_SHA:0:8}
       CI_COMMIT_SHA_SHORT="$(git rev-parse --short HEAD)"
       echo $CI_COMMIT_SHA_SHORT
-      if git diff HEAD~ --name-only | egrep 'storage/backup/docker/'; then
-        echo "####### gesiscss/nfs-backup-orc:$CI_COMMIT_SHA_SHORT"
-        docker login -u=$DOCKER_USERNAME -p=$DOCKER_PASSWORD
-        docker build -t gesiscss/nfs-backup-orc:$CI_COMMIT_SHA_SHORT storage/backup/docker/.
-        docker push gesiscss/nfs-backup-orc:$CI_COMMIT_SHA_SHORT
-      fi;
+      # if git diff HEAD~ --name-only | egrep 'storage/backup/docker/'; then
+      #   echo "####### gesiscss/nfs-backup-orc:$CI_COMMIT_SHA_SHORT"
+      #   docker login -u=$DOCKER_USERNAME -p=$DOCKER_PASSWORD
+      #   docker build -t gesiscss/nfs-backup-orc:$CI_COMMIT_SHA_SHORT storage/backup/docker/.
+      #   docker push gesiscss/nfs-backup-orc:$CI_COMMIT_SHA_SHORT
+      # fi;
   only:
     - staging
   tags:
